tests/baselines/reference/decoratorCallGeneric.errors.txt
decoratorCallGeneric.ts(7,2): error TS1238: Unable to resolve signature of class decorator when called as an expression.
  Argument of type 'typeof C' is not assignable to parameter of type 'I<C>'.
    The types returned by 'm()' are incompatible between these types.
      Type 'void' is not assignable to type 'C'.


==== decoratorCallGeneric.ts (1 errors) ====
    interface I<T> {
        prototype: T,
        m: () => T
    }
    function dec<T>(c: I<T>) { }
    
    @dec
     ~~~
!!! error TS1238: Unable to resolve signature of class decorator when called as an expression.
!!! error TS1238:   Argument of type 'typeof C' is not assignable to parameter of type 'I<C>'.
!!! error TS1238:     The types returned by 'm()' are incompatible between these types.
!!! error TS1238:       Type 'void' is not assignable to type 'C'.
    class C {
        _brand: any;
        static m() {}
    }
    